[tool.poetry]
name = "asmapy"
version = "0.1.0"
description = "CLI to download dumps, convert dump files to human-readable ones, compare two files, convert to binary, and so on."
authors = ["Bruno Garcia <brunoely.gc@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
